Reformated the header. Cleaned up the code and fixed the bug where the 'back to the systems list' link would appear behind hte tabs.

--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -78,7 +78,7 @@ li {
 	margin-top: 0;
 	padding-top: 15px;
 /*	padding-left: 10px;*/
-	height: 40px;
+	height: 80px;
 }
 
 #header span {
